@@ -109,7 +109,10 @@ module ActiveScaffold::Actions
 
     def copy_attributes(orig, dst)
       attributes = orig.attributes
-      if orig.class.respond_to? :protected_attributes
+      if orig.class.respond_to? :accessible_attributes
+        attributes.each { |attr, value| dst[attr] = value unless orig.class.accessible_attributes.deny? attr }
+        attributes = attributes.slice(*orig.class.accessible_attributes)
+      elsif orig.class.respond_to? :protected_attributes
         orig.class.protected_attributes.each { |attr| dst[attr] = orig[attr] }
         attributes = attributes.except(*orig.class.protected_attributes)
       end
